--- a/src/pybind/mgr/dashboard/frontend/src/styles/ng2-tree.scss
+++ b/src/pybind/mgr/dashboard/frontend/src/styles/ng2-tree.scss
@@ -23,3 +23,8 @@
     display: none;
   }
 }
+
+/* angular-tree */
+::ng-deep tree-root .tree-children {
+  overflow: inherit
+}
